# duck_vd

./: GEMINI.md  README.md  pyproject.toml
src/duck_vd/: main.py
tests/: test_main.py
