[project]
name = "duck-vd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "datafusion>=48.0.0",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.4",
    "ty>=0.0.1a14",
]

[project.scripts]
duck_vd = "duck_vd.main:cli"

[tool.pytest.ini_options]
pythonpath = "src"
